# finscraper

./: .gitignore  README.md  pyproject.toml
docs/: docs.md
finscraper/: model_training.py  preprocessor.py  scraper.py  test_setup.py
